# openapi/userm.json
@@ -475,7 +475,7 @@
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/User"
+                  "$ref" : "#/components/schemas/Group"
                 }
               }
             }
@@ -1676,6 +1676,15 @@
           "version" : {
             "type" : "integer",
             "format" : "int32"
+          },
+          "_links" : {
+            "$ref" : "#/components/schemas/GroupLinks"
+          },
+          "roles" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Role"
+            }
           }
         }
       },
@@ -1693,165 +1702,6 @@
           },
           "perms" : {
             "type" : "string"
-          }
-        }
-      },
-      "FieldError" : {
-        "type" : "object",
-        "properties" : {
-          "errorType" : {
-            "type" : "string",
-            "enum" : [ "MANDATORY", "NON_UNIQUE", "INVALID_FORMAT", "SHORT_DATA", "INVALID_PRODUCT", "DATA_TOO_LONG", "USER_NOT_FOUND", "INVALID_SUBSTITUTE_USER", "NOT_ALLOWED" ]
-          },
-          "fieldName" : {
-            "type" : "string"
-          },
-          "message" : {
-            "type" : "string"
-          }
-        }
-      },
-      "CreateGroupRequest" : {
-        "required" : [ "description", "name" ],
-        "type" : "object",
-        "properties" : {
-          "name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          },
-          "product" : {
-            "type" : "string"
-          }
-        }
-      },
-      "User" : {
-        "required" : [ "email", "id", "name", "username", "version" ],
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "username" : {
-            "type" : "string"
-          },
-          "usernameAD" : {
-            "type" : "string"
-          },
-          "email" : {
-            "type" : "string"
-          },
-          "contact" : {
-            "type" : "string"
-          },
-          "password" : {
-            "type" : "string",
-            "writeOnly" : true
-          },
-          "substitute" : {
-            "$ref" : "#/components/schemas/User"
-          },
-          "version" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "groups" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/Group"
-            }
-          },
-          "state" : {
-            "$ref" : "#/components/schemas/UserState"
-          },
-          "substitutedUsers" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/User"
-            }
-          },
-          "_links" : {
-            "$ref" : "#/components/schemas/UserLinks"
-          },
-          "passwordCleared" : {
-            "type" : "boolean"
-          }
-        }
-      },
-      "UserLinks" : {
-        "required" : [ "perms" ],
-        "type" : "object",
-        "properties" : {
-          "self" : {
-            "type" : "string"
-          },
-          "update" : {
-            "type" : "string"
-          },
-          "enable" : {
-            "type" : "string"
-          },
-          "disable" : {
-            "type" : "string"
-          },
-          "assignSubstitute" : {
-            "type" : "string"
-          },
-          "addToGroup" : {
-            "type" : "string"
-          },
-          "removeFromGroup" : {
-            "type" : "string"
-          },
-          "delete" : {
-            "type" : "string"
-          },
-          "perms" : {
-            "type" : "string"
-          },
-          "assign-substitute" : {
-            "type" : "string",
-            "deprecated" : true
-          },
-          "remove-from" : {
-            "type" : "string",
-            "deprecated" : true
-          },
-          "add-to" : {
-            "type" : "string",
-            "deprecated" : true
-          }
-        }
-      },
-      "UserState" : {
-        "type" : "string",
-        "enum" : [ "enabled", "disabled" ]
-      },
-      "UpdateGroupRequest" : {
-        "required" : [ "description", "id", "name", "version" ],
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          },
-          "product" : {
-            "type" : "string"
-          },
-          "version" : {
-            "type" : "integer",
-            "format" : "int32"
           }
         }
       },
@@ -1901,13 +1751,128 @@
           "perms" : {
             "type" : "string"
           },
+          "add-to" : {
+            "type" : "string",
+            "deprecated" : true
+          },
           "remove-from" : {
             "type" : "string",
             "deprecated" : true
+          }
+        }
+      },
+      "Role" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "product" : {
+            "type" : "string"
+          },
+          "version" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "_links" : {
+            "$ref" : "#/components/schemas/RoleLinks"
+          },
+          "permissions" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Permission"
+            }
+          }
+        }
+      },
+      "RoleLinks" : {
+        "type" : "object",
+        "properties" : {
+          "self" : {
+            "type" : "string"
+          },
+          "update" : {
+            "type" : "string"
+          },
+          "addToGroup" : {
+            "type" : "string"
+          },
+          "removeFromGroup" : {
+            "type" : "string"
+          },
+          "delete" : {
+            "type" : "string"
+          },
+          "perms" : {
+            "type" : "string"
           },
           "add-to" : {
             "type" : "string",
             "deprecated" : true
+          },
+          "remove-from" : {
+            "type" : "string",
+            "deprecated" : true
+          }
+        }
+      },
+      "FieldError" : {
+        "type" : "object",
+        "properties" : {
+          "errorType" : {
+            "type" : "string",
+            "enum" : [ "MANDATORY", "NON_UNIQUE", "INVALID_FORMAT", "SHORT_DATA", "INVALID_PRODUCT", "DATA_TOO_LONG", "USER_NOT_FOUND", "INVALID_SUBSTITUTE_USER", "NOT_ALLOWED" ]
+          },
+          "fieldName" : {
+            "type" : "string"
+          },
+          "message" : {
+            "type" : "string"
+          }
+        }
+      },
+      "CreateGroupRequest" : {
+        "required" : [ "description", "name" ],
+        "type" : "object",
+        "properties" : {
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "product" : {
+            "type" : "string"
+          }
+        }
+      },
+      "UpdateGroupRequest" : {
+        "required" : [ "description", "id", "name", "version" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          },
+          "product" : {
+            "type" : "string"
+          },
+          "version" : {
+            "type" : "integer",
+            "format" : "int32"
           }
         }
       },
@@ -1956,62 +1921,6 @@
           },
           "productName" : {
             "$ref" : "#/components/schemas/ProductName"
-          }
-        }
-      },
-      "Role" : {
-        "type" : "object",
-        "properties" : {
-          "id" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "name" : {
-            "type" : "string"
-          },
-          "description" : {
-            "type" : "string"
-          },
-          "product" : {
-            "type" : "string"
-          },
-          "version" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "_links" : {
-            "$ref" : "#/components/schemas/RoleLinks"
-          }
-        }
-      },
-      "RoleLinks" : {
-        "type" : "object",
-        "properties" : {
-          "self" : {
-            "type" : "string"
-          },
-          "update" : {
-            "type" : "string"
-          },
-          "addToGroup" : {
-            "type" : "string"
-          },
-          "removeFromGroup" : {
-            "type" : "string"
-          },
-          "delete" : {
-            "type" : "string"
-          },
-          "perms" : {
-            "type" : "string"
-          },
-          "remove-from" : {
-            "type" : "string",
-            "deprecated" : true
-          },
-          "add-to" : {
-            "type" : "string",
-            "deprecated" : true
           }
         }
       },
@@ -2167,6 +2076,112 @@
           }
         }
       },
+      "User" : {
+        "required" : [ "email", "id", "name", "username", "version" ],
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "name" : {
+            "type" : "string"
+          },
+          "username" : {
+            "type" : "string"
+          },
+          "usernameAD" : {
+            "type" : "string"
+          },
+          "email" : {
+            "type" : "string"
+          },
+          "contact" : {
+            "type" : "string"
+          },
+          "password" : {
+            "type" : "string",
+            "writeOnly" : true
+          },
+          "substitute" : {
+            "$ref" : "#/components/schemas/User"
+          },
+          "version" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "groups" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Group"
+            }
+          },
+          "state" : {
+            "$ref" : "#/components/schemas/UserState"
+          },
+          "substitutedUsers" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/User"
+            }
+          },
+          "_links" : {
+            "$ref" : "#/components/schemas/UserLinks"
+          },
+          "passwordCleared" : {
+            "type" : "boolean"
+          }
+        }
+      },
+      "UserLinks" : {
+        "required" : [ "perms" ],
+        "type" : "object",
+        "properties" : {
+          "self" : {
+            "type" : "string"
+          },
+          "update" : {
+            "type" : "string"
+          },
+          "enable" : {
+            "type" : "string"
+          },
+          "disable" : {
+            "type" : "string"
+          },
+          "assignSubstitute" : {
+            "type" : "string"
+          },
+          "addToGroup" : {
+            "type" : "string"
+          },
+          "removeFromGroup" : {
+            "type" : "string"
+          },
+          "delete" : {
+            "type" : "string"
+          },
+          "perms" : {
+            "type" : "string"
+          },
+          "assign-substitute" : {
+            "type" : "string",
+            "deprecated" : true
+          },
+          "add-to" : {
+            "type" : "string",
+            "deprecated" : true
+          },
+          "remove-from" : {
+            "type" : "string",
+            "deprecated" : true
+          }
+        }
+      },
+      "UserState" : {
+        "type" : "string",
+        "enum" : [ "enabled", "disabled" ]
+      },
       "CreateUserRequest" : {
         "required" : [ "email", "name", "username" ],
         "type" : "object",
@@ -2192,12 +2207,6 @@
           },
           "substitute" : {
             "$ref" : "#/components/schemas/User"
-          },
-          "groups" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/Group"
-            }
           },
           "state" : {
             "$ref" : "#/components/schemas/UserState"
@@ -2255,12 +2264,6 @@
           "version" : {
             "type" : "integer",
             "format" : "int32"
-          },
-          "groups" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/Group"
-            }
           },
           "state" : {
             "$ref" : "#/components/schemas/UserState"
