# packages/userm/src/schema/user-links.ts
@@ -74,12 +74,12 @@ export interface UserLinks {
      * @memberof UserLinks
      * @deprecated
      */
-    'remove-from'?: string;
+    'add-to'?: string;
     /**
      * 
      * @type {string}
      * @memberof UserLinks
      * @deprecated
      */
-    'add-to'?: string;
+    'remove-from'?: string;
 }
